# openheart-core

./: .buildconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  main.c  meson.build
experiment/: experiments_main.c  g_lib_exp.c  g_lib_exp.h  kernel_exp.c  kernel_exp.h  meson.build
lib/: CMakeLists.txt  meson.build
lib/inc/: array_alg.h  fs_notify.h  fs_notify_handler.h  fs_types.h  func.h  kernel_attributes.h  kernel_data.h  kp_notify.h  kp_notify_handler.h  kp_types.h  permissions.h  signal_handlers.h
lib/src/: array_alg.c  fs_notify.c  fs_notify_handler.c  func.c  kernel_attributes.c  kernel_data.c  kp_notify.c  kp_notify_handler.c  permissions.c  signal_handlers.c
pch/: core_pch.h
process/: main_process.c  main_process.h  meson.build
qobject/: CMakeLists.txt
research/: c_practices.md  uname.md
scripts/: sudo_gdb
src/: main.c
subprojects/ccan_json/: meson.build
subprojects/logc/: meson.build
